sandbox/output
Codeine.java:2: error: cannot find symbol
    public Codeine(List<Prescription> prescriptions) {
                   ^
  symbol:   class List
  location: class Codeine
PatientTest.java:13: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                        ^
  symbol:   variable patient
  location: class PatientTest
PatientTest.java:13: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
3 errors
